Modified composer.json authors[0]->homepage

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         {
             "name"    : "Francisco Rivera",
             "email"   : "francisco@rchdev.com.br",
-            "homepage": "https://rchdev.com.br"
+            "homepage": "http://rchdev.com.br"
         }
     ],
     "homepage": "https://github.com/rchdev/simple-orm",
